--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "A Clean Blog Theme by Start Bootstrap"
+description: "A JavaScript, Go and Ruby walk into a bar..."
 ---
 
 {% for post in paginator.posts %}
