--- a/about.html
+++ b/about.html
@@ -5,8 +5,14 @@ description: "This is what I do."
 header-img: "img/about-bg.jpg"
 ---
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
+<p>Hi! I'm David and I'm Ruby/JavaScript/Go Software Engineer living and working in New York City.</p>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
+<p>I'm looking forward to writing about topics that are of general interest to all developers, regardless of whether or not they're junior or senior!</p>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum molestiae debitis nobis, quod sapiente qui voluptatum, placeat magni repudiandae accusantium fugit quas labore non rerum possimus, corrupti enim modi! Et.</p>
+<p>My specific areas of interest are:</p>
+<ul>
+  <li>simple but powerful testing and system design</li>
+  <li>automating both development and production environments</li>
+  <li>teaching (and the various discovery that that brings about)</li>
+  <li>entrepreneurship</li>
+</ul>
